@@ -23,3 +23,5 @@
 public/assets/
 secret-run-locally.sh
 .rake_tasks~
+t.sh
+t.prod.sh
