@@ -17,22 +17,17 @@ WORKER_PROCESSES=1
 # This will be the address and port that Unicorn binds to. The only real
 # reason you would ever change this is if you have another service running
 # that must be on port 8000.
-LISTEN_ON=0.0.0.0:8000
+LISTEN_ON=0.0.0.0:3000
 
 
-# This is how we'll connect to PostgreSQL. It's good practice to keep the
-# username lined up with your application's name but it's not necessary.
-#
-# Since we're dealing with development mode, it's ok to have a weak password
-# such as `yourpassword` but in production you'll definitely want a better one.
-#
-# Eventually we'll be running everything in Docker containers, and you can set
-# the host to be equal to `postgres` thanks to how Docker allows you to link
-# containers.
-#
-# Everything else is standard Rails configuration for a PostgreSQL database.
-DATABASE_URL=postgresql://drkiq:yourpassword@postgres:5432/drkiq?encoding=utf8&pool=5&timeout=5000
-
+# This is how we'll connect to DB in PROD. Note this is not needed in DEV and in TEST.
+# For Postgres (note you need to tweak Gemfile for it!)
+#DATABASE_URL=postgresql://drkiq:yourpassword@postgres:5432/drkiq?encoding=utf8&pool=5&timeout=5000
+# For MYSQL (this works out of the box):
+#DATABASE_URL="mysql2://user:pass@1.2.3.4:3306/dbname?encoding=utf8&pool=5&timeout=5000"
+# For Sqlite3:
+#DATABASE_URL="sqlite:///db/production.sqlite3"
+#DATABASE_URL="sqlite3:////%PWD%db/development.sqlite3"
 
 # Both of these values are using the same Redis address but in a real
 # production environment you may want to separate Sidekiq to its own instance,
@@ -43,8 +38,7 @@ DATABASE_URL=postgresql://drkiq:yourpassword@postgres:5432/drkiq?encoding=utf8&p
 CACHE_URL=redis://redis:6379/0
 JOB_WORKER_URL=redis://redis:6379/0
 
-
-APP_NAME="pasta-vanilla"
+APP_NAME="pasta-vanilla-dev"
 
 BASIC_AUTH_USER="riccardo"
-BASIC_AUTH_PASS="ch4ng3me"
+BASIC_AUTH_PASS="ch4ng3me!"
