@@ -6,19 +6,16 @@ application up and running.
 Things you may want to cover:
 
 * Ruby version
-
 * System dependencies
-
 * Configuration
-
 * Database creation
-
 * Database initialization
-
 * How to run the test suite
-
 * Services (job queues, cache servers, search engines, etc.)
-
 * Deployment instructions
-
 * ...
+
+# Installation
+
+* Clone this repo
+* copy `.pasta.env.dist` into `.pasta.env`. Tweak vars, particularly note that PROD needs MySQL to run so you need to set up one mysql instance somewhere.
