@@ -1,11 +1,17 @@
 <h1>About this app</h1>
 
+<h2> RicConfiguration </h2>
+
 <h3><%= @app_description %></h3>
 
 * GitHub Repo: <%= @app_repo_url %><br/>
+* App Name: <b><%= @app_version %></b> <br/>
 * App Ver: <b><%= @app_version %></b> <br/>
 * GitHUb Latest version: <a href="https://raw.githubusercontent.com/palladius/ror5-pasta/master/pasta/VERSION"><b><%= @app_latest_ver %></b></a> <br/>
-* App Desciption: 
+* App Description: <b><%= @app_description %></b> <br/>
+* App app_git_version: <b><%= @app_git_version %></b> <br/>
+* App app_commit_repo: <b><%= @app_commit_repo %></b> <br/>
+
 
 <h2>Changelog</h2>
 
