@@ -1,4 +1,5 @@
-
+2017-02-09 1.0.5  Added `db_seed_ver` to "version" db seed.
+2017-02-09 1.0.4  DRYed the configs. Added instructions to install this.
 2017-02-09 1.0.3  Added authentication via ENV variable once again. Docker wins!
 2017-02-09 1.0.2  Added nice icons. Two migrations: URLs to Articles, facebook/twitter_id to comments. Still quite silly...
 2017-02-09 1.0.1  Added welcome/about. Fixed app_name vars. Added favico and CSS.
